feat(mcp): add Time MCP server with FastMCP
- Implement timezone conversion and current time functions
- Add Docker configuration for containerization
- Update docker-compose with Time MCP service on port 8005

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,15 @@ services:
       - GITHUB_TOKEN=${GITHUB_TOKEN}
     restart: unless-stopped
 
+  # Time MCP Server
+  time-mcp:
+    build:
+      context: ./mcp-servers/time
+      dockerfile: Dockerfile
+    ports:
+      - "8005:8000"
+    restart: unless-stopped
+
   # Web interface (Next.js PWA)
   web:
     build:
