fix(mcp): update Time MCP server for HTTP transport
- Switch from STDIO to HTTP transport (Streamable HTTP)
- Add Zscaler certificate handling for corporate proxy
- Configure server to run on port 8005
- Successfully tested with FastMCP 2.11.3

--- a/mcp-servers/time/Dockerfile
+++ b/mcp-servers/time/Dockerfile
@@ -2,6 +2,19 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+# For corporate proxy/Zscaler environments
+# Mount certificate at build time: docker build --build-arg CERT_PATH=/path/to/cert ...
+ARG CERT_PATH
+COPY ${CERT_PATH:-/dev/null} /tmp/zscaler.crt
+RUN if [ -f /tmp/zscaler.crt ] && [ -s /tmp/zscaler.crt ]; then \
+        cp /tmp/zscaler.crt /usr/local/share/ca-certificates/ && \
+        update-ca-certificates; \
+    fi
+
+# Configure pip to use system certificates
+ENV REQUESTS_CA_BUNDLE=/etc/ssl/certs/ca-certificates.crt
+ENV SSL_CERT_FILE=/etc/ssl/certs/ca-certificates.crt
+
 # Install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
