feat(mcp): add Sequential Thinking MCP server
- Implement chain-of-thought reasoning capabilities
- Support dynamic thinking with revisions and branches
- Add session management for thinking processes
- Include export functionality in multiple formats
- Port 8007 allocated for Sequential Thinking service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,6 +86,15 @@ services:
       - "8005:8000"
     restart: unless-stopped
 
+  # Sequential Thinking MCP Server
+  sequential-thinking-mcp:
+    build:
+      context: ./mcp-servers/sequential-thinking
+      dockerfile: Dockerfile
+    ports:
+      - "8007:8007"
+    restart: unless-stopped
+
   # Web interface (Next.js PWA)
   web:
     build:
