feat: add official MCP servers to docker-compose
- Configure 10 official MCP servers using existing Docker images
- Time MCP (port 3001): mcp/time
- GitHub Personal/Work MCP (ports 3002/3003): mcp/github with separate tokens
- Fetch MCP (port 3004): mcp/fetch
- Notion MCP (port 3005): mcp/notion
- Sequential Thinking MCP (port 3006): mcp/sequentialthinking
- Filesystem MCP (port 3007): mcp/filesystem
- Playwright MCP (port 3008): mcp/playwright
- Memory MCP (port 3009): mcp/memory
- Atlassian MCP (port 3010): ghcr.io/sooperset/mcp-atlassian

Updated .env.example with all required environment variables
Simplified Atlassian config to use shared username/token variables
No custom Dockerfiles needed - using official images directly

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,16 @@
 # API Keys
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
 NOTION_TOKEN=your_notion_integration_token_here
-GITHUB_TOKEN=your_github_personal_access_token_here
+
+# GitHub Tokens (Personal and Work accounts)
+GITHUB_PERSONAL_TOKEN=your_github_personal_access_token_here
+GITHUB_WORK_TOKEN=your_github_work_access_token_here
+
+# Atlassian (Confluence + JIRA)
+CONFLUENCE_URL=https://your-company.atlassian.net/wiki/
+JIRA_URL=https://your-company.atlassian.net/
+ATLASSIAN_USERNAME=your.email@company.com
+ATLASSIAN_API_TOKEN=your_atlassian_api_token_here
 
 # Database
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/alfred
