--- a/mcp-servers/time/time.env
+++ b/mcp-servers/time/time.env
@@ -3,4 +3,4 @@
 # Deployed at: mcp-time.artemsys.ai
 
 PORT=7001
-SHELL_CMD=/usr/bin/docker run -i --rm mcp/time
+SHELL_CMD=docker run -i --rm mcp/time
