fix: add quotes to SHELL_CMD values in env files for proper systemd parsing

--- a/mcp-servers/filesystem/filesystem.env
+++ b/mcp-servers/filesystem/filesystem.env
@@ -4,4 +4,4 @@
 # Note: Mounts /opt/mcp/data for file access
 
 PORT=7007
-SHELL_CMD=docker run -i --rm -v /opt/mcp/data:/data:rw mcp/filesystem
+SHELL_CMD="docker run -i --rm -v /opt/mcp/data:/data:rw mcp/filesystem"
