--- a/mcp-servers/github-personal/github-personal.env
+++ b/mcp-servers/github-personal/github-personal.env
@@ -4,4 +4,4 @@
 # Note: Set GITHUB_PERSONAL_ACCESS_TOKEN in system environment
 
 PORT=7003
-SHELL_CMD=docker run -i --rm -e GITHUB_PERSONAL_ACCESS_TOKEN mcp/github
+SHELL_CMD="docker run -i --rm -e GITHUB_PERSONAL_ACCESS_TOKEN mcp/github"
