--- a/mcp-servers/memory/memory.env
+++ b/mcp-servers/memory/memory.env
@@ -5,4 +5,4 @@
 # Data persists on server, not locally
 
 PORT=7009
-SHELL_CMD=docker run -i --rm -v claude-memory:/app/dist mcp/memory
+SHELL_CMD="docker run -i --rm -v claude-memory:/app/dist mcp/memory"
