--- a/mcp-servers/notion/notion.env
+++ b/mcp-servers/notion/notion.env
@@ -4,4 +4,4 @@
 # Note: Set NOTION_API_KEY in system environment
 
 PORT=7006
-SHELL_CMD=docker run -i --rm -e NOTION_API_KEY mcp/notion
+SHELL_CMD="docker run -i --rm -e NOTION_API_KEY mcp/notion"
