--- a/mcp-servers/playwright/playwright.env
+++ b/mcp-servers/playwright/playwright.env
@@ -5,4 +5,4 @@
 # Consider security implications before enabling
 
 PORT=7008
-SHELL_CMD=docker run -i --rm mcp/playwright
+SHELL_CMD="docker run -i --rm mcp/playwright"
