--- a/mcp-servers/sequential-thinking/sequential-thinking.env
+++ b/mcp-servers/sequential-thinking/sequential-thinking.env
@@ -3,4 +3,4 @@
 # Deployed at: mcp-sequential.artemsys.ai
 
 PORT=7002
-SHELL_CMD=docker run -i --rm mcp/sequentialthinking
+SHELL_CMD="docker run -i --rm mcp/sequentialthinking"
