--- a/mcp-servers/github-work/github-work.env
+++ b/mcp-servers/github-work/github-work.env
@@ -4,4 +4,4 @@
 # Note: Set GITHUB_WORK_ACCESS_TOKEN in system environment
 
 PORT=7004
-SHELL_CMD=docker run -i --rm -e GITHUB_PERSONAL_ACCESS_TOKEN=${GITHUB_WORK_ACCESS_TOKEN} mcp/github
+SHELL_CMD="docker run -i --rm -e GITHUB_PERSONAL_ACCESS_TOKEN=${GITHUB_WORK_ACCESS_TOKEN} mcp/github"
