feat: add API key management with repo-based .env file
- Create setup-env.sh script for interactive API key configuration
- Store keys in mcp-servers/.env (gitignored) for portability
- Update systemd template to load from repo-based .env
- Add .env.example with documentation

--- a/mcp-servers/mcp@.service
+++ b/mcp-servers/mcp@.service
@@ -14,6 +14,9 @@ Wants=docker.service
 
 [Service]
 # Note: /path/to/alfred-system will be replaced by deploy.sh with actual repo path
+# Load API keys and tokens (optional, will be ignored if file doesn't exist)
+EnvironmentFile=-/path/to/alfred-system/mcp-servers/.env
+# Load server-specific configuration
 EnvironmentFile=/path/to/alfred-system/mcp-servers/%i/%i.env
 
 # Using --shell mode for reliable argument passing
