fix: improve environment variable handling and Notion token naming
- Fix environment variable expansion in Docker commands for GitHub, Notion, Atlassian
  (was passing variable names, now passes actual values with ${VAR} syntax)
- Rename NOTION_API_KEY to NOTION_INTEGRATION_TOKEN throughout codebase
- Update Notion token format to ntn_ prefix (was incorrectly secret_)
- Improve setup script clarity:
  - Correct Notion token description
  - Make Atlassian section clearly optional but all-or-nothing
- Note: Docker container still expects NOTION_API_KEY env var internally

--- a/mcp-servers/notion/notion.env
+++ b/mcp-servers/notion/notion.env
@@ -1,7 +1,7 @@
 # MCP Notion Server Configuration
 # Port: 7006
 # Deployed at: mcp-notion.artemsys.ai
-# Note: Set NOTION_API_KEY in system environment
+# Note: Set NOTION_INTEGRATION_TOKEN in system environment
 
 PORT=7006
-SHELL_CMD="docker run -i --rm -e NOTION_API_KEY mcp/notion"
+SHELL_CMD="docker run -i --rm -e NOTION_API_KEY=${NOTION_INTEGRATION_TOKEN} mcp/notion"
