--- a/mcp-servers/atlassian/atlassian.env
+++ b/mcp-servers/atlassian/atlassian.env
@@ -10,4 +10,4 @@
 # - JIRA_API_TOKEN
 
 PORT=7010
-SHELL_CMD="docker run -i --rm -e CONFLUENCE_URL -e CONFLUENCE_USERNAME -e CONFLUENCE_API_TOKEN -e JIRA_URL -e JIRA_USERNAME -e JIRA_API_TOKEN ghcr.io/sooperset/mcp-atlassian:latest"
+SHELL_CMD="docker run -i --rm -e CONFLUENCE_URL=${CONFLUENCE_URL} -e CONFLUENCE_USERNAME=${CONFLUENCE_USERNAME} -e CONFLUENCE_API_TOKEN=${CONFLUENCE_API_TOKEN} -e JIRA_URL=${JIRA_URL} -e JIRA_USERNAME=${JIRA_USERNAME} -e JIRA_API_TOKEN=${JIRA_API_TOKEN} ghcr.io/sooperset/mcp-atlassian:latest"
