fix: correct Notion container environment variable to NOTION_TOKEN
- The mcp/notion container expects NOTION_TOKEN, not NOTION_API_KEY
- Verified other containers:
  - GitHub: GITHUB_PERSONAL_ACCESS_TOKEN (correct)
  - Atlassian: CONFLUENCE_API_TOKEN, JIRA_API_TOKEN (correct)
  - Others don't require API tokens

--- a/mcp-servers/notion/notion.env
+++ b/mcp-servers/notion/notion.env
@@ -4,4 +4,4 @@
 # Note: Set NOTION_INTEGRATION_TOKEN in system environment
 
 PORT=7006
-SHELL_CMD="docker run -i --rm -e NOTION_API_KEY=${NOTION_INTEGRATION_TOKEN} mcp/notion"
+SHELL_CMD="docker run -i --rm -e NOTION_TOKEN=${NOTION_INTEGRATION_TOKEN} mcp/notion"
