fix: correct Notion MCP environment variables and add Bearer auth headers
- Update docker-compose.yml to use NOTION_TOKEN instead of NOTION_API_KEY
- Add OPENAPI_MCP_HEADERS to notion.env for proper Bearer token authentication
- This should resolve 401 authentication errors with Notion API

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,7 +83,7 @@ services:
     ports:
       - "3005:3000"
     environment:
-      - NOTION_API_KEY=${NOTION_TOKEN}
+      - NOTION_TOKEN=${NOTION_TOKEN}
     restart: unless-stopped
 
   # Sequential Thinking MCP Server
