--- a/mcp-servers/notion/notion.env
+++ b/mcp-servers/notion/notion.env
@@ -5,3 +5,4 @@
 
 PORT=7006
 SHELL_CMD="docker run -i --rm -e NOTION_TOKEN=${NOTION_INTEGRATION_TOKEN} mcp/notion"
+OPENAPI_MCP_HEADERS="{\"Authorization\": \"Bearer ${NOTION_INTEGRATION_TOKEN}\", \"Notion-Version\": \"2022-06-28\"}"
