feat(docker): add portable containerization setup
- Enhanced Makefile with environment detection (container/CI/local)
- Smart UV path resolution for portability
- Multi-stage Dockerfile with uv for fast builds
- Non-root user (alfred) for security
- Health checks for container orchestration
- docker-compose.yml with PostgreSQL and Redis services
- Proper .dockerignore to minimize image size
- All paths now work in containers and on any server

This ensures the app is fully portable and can run on:
- Local development machines (MacOS/Linux/WSL)
- Docker containers
- DigitalOcean droplet
- CI/CD pipelines

--- a/agent-core/Makefile
+++ b/agent-core/Makefile
@@ -1,7 +1,23 @@
 # Makefile for agent-core development
 # Uses uv for package management and virtual environment
 
-.PHONY: help install run build lint fmt test db-migrate clean dev-setup
+.PHONY: help install run build lint fmt test db-migrate clean dev-setup docker-build docker-run
+
+# Detect if we're in a container or CI environment
+IN_CONTAINER := $(shell [ -f /.dockerenv ] && echo 1 || echo 0)
+CI := $(shell [ -n "$$CI" ] && echo 1 || echo 0)
+
+# Set UV_PATH based on environment
+# In containers, uv will be in PATH already
+# On local dev, check common locations
+ifeq ($(IN_CONTAINER),1)
+    UV := uv
+else ifeq ($(CI),1)
+    UV := uv
+else
+    # Try to find uv in common locations
+    UV := $(shell command -v uv 2>/dev/null || echo "$$HOME/.local/bin/uv")
+endif
 
 # Default target
 help:
@@ -21,43 +37,54 @@ help:
 	@echo "Database:"
 	@echo "  db-migrate  Run database migrations"
 	@echo ""
+	@echo "Docker:"
+	@echo "  docker-build  Build Docker image"
+	@echo "  docker-run    Run in Docker container"
+	@echo ""
 	@echo "Utilities:"
 	@echo "  clean       Clean build artifacts"
 
 # Development setup
 install:
-	PATH="$$HOME/.local/bin:$$PATH" uv sync --native-tls
+	$(UV) sync --native-tls
 
 dev-setup: install
-	PATH="$$HOME/.local/bin:$$PATH" uv run pre-commit install
+	$(UV) run pre-commit install
 
 # Run the application
 run:
-	PATH="$$HOME/.local/bin:$$PATH" uv run uvicorn src.app:app --host 0.0.0.0 --port 8080 --reload
+	$(UV) run uvicorn src.app:app --host 0.0.0.0 --port 8080 --reload
 
 # Build the application (for Docker)
 build:
-	PATH="$$HOME/.local/bin:$$PATH" uv build
+	$(UV) build
 
 # Code quality
 lint:
-	PATH="$$HOME/.local/bin:$$PATH" uv run ruff check src/ tests/
-	PATH="$$HOME/.local/bin:$$PATH" uv run black --check src/ tests/
-	PATH="$$HOME/.local/bin:$$PATH" uv run isort --check-only src/ tests/
+	$(UV) run ruff check src/ tests/
+	$(UV) run black --check src/ tests/
+	$(UV) run isort --check-only src/ tests/
 
 fmt:
-	PATH="$$HOME/.local/bin:$$PATH" uv run ruff format src/ tests/
-	PATH="$$HOME/.local/bin:$$PATH" uv run black src/ tests/
-	PATH="$$HOME/.local/bin:$$PATH" uv run isort src/ tests/
+	$(UV) run ruff format src/ tests/
+	$(UV) run black src/ tests/
+	$(UV) run isort src/ tests/
 
 # Testing
 test:
-	PATH="$$HOME/.local/bin:$$PATH" uv run pytest tests/ -v
+	$(UV) run pytest tests/ -v
 
 # Database operations (will implement with alembic later)
 db-migrate:
 	@echo "Database migrations will be implemented in Week 2/3"
-	@echo "TODO: PATH=\"$$HOME/.local/bin:$$PATH\" uv run alembic upgrade head"
+	@echo "TODO: $(UV) run alembic upgrade head"
+
+# Docker operations
+docker-build:
+	docker build -t alfred-agent-core:latest .
+
+docker-run:
+	docker run -p 8080:8080 --env-file .env alfred-agent-core:latest
 
 # Cleanup
 clean:
