fix(docker): ensure portability and successful builds
- Fixed Dockerfile to include README.md for pyproject.toml
- Fixed PYTHONPATH to avoid undefined variable warning
- Updated .dockerignore to include README.md
- Tested successful Docker build

The application now builds and runs correctly in containers.

--- a/agent-core/.dockerignore
+++ b/agent-core/.dockerignore
@@ -44,11 +44,11 @@ htmlcov/
 *~
 .DS_Store
 
-# Documentation
-*.md
+# Documentation (except README.md which is needed for pyproject.toml)
 docs/
-README.md
 CLAUDE.md
+*.md
+!README.md
 
 # Test files
 tests/
