feat(api): Issue #5 - Scaffold FastAPI app with /healthz and /chat endpoints (#37)
* feat(api): scaffold FastAPI app with /healthz and /chat endpoints

Implements Issue #5 - MVP Week 1 FastAPI Scaffolding

Changes:
- Complete FastAPI application with lifespan, middleware, and error handling
- Health check endpoints (/healthz, /readyz, /livez) for K8s probes
- Chat endpoint with Pydantic models and stubbed response
- Request ID middleware for distributed tracing
- Structured error handling with taxonomy (APP-4XX-VALIDATION, etc.)
- CORS middleware configured for local development
- API key authentication dependency
- Comprehensive inline documentation for learning

Setup:
- Configured uv as package manager for 10-100x faster installs
- Added all dependencies to pyproject.toml
- Set up pre-commit hooks (ruff, black, isort)
- Updated Makefile with PATH exports for uv
- Fixed ruff config to allow camelCase for API compatibility

Testing:
- All endpoints tested successfully with curl
- Health check returns version and status
- Chat endpoint validates request and returns stubbed response
- Swagger docs available at /docs

Next: Issue #6 - Environment configuration loader

* feat(docker): add portable containerization setup

- Enhanced Makefile with environment detection (container/CI/local)
- Smart UV path resolution for portability
- Multi-stage Dockerfile with uv for fast builds
- Non-root user (alfred) for security
- Health checks for container orchestration
- docker-compose.yml with PostgreSQL and Redis services
- Proper .dockerignore to minimize image size
- All paths now work in containers and on any server

This ensures the app is fully portable and can run on:
- Local development machines (MacOS/Linux/WSL)
- Docker containers
- DigitalOcean droplet
- CI/CD pipelines

* fix(docker): ensure portability and successful builds

- Fixed Dockerfile to include README.md for pyproject.toml
- Fixed PYTHONPATH to avoid undefined variable warning
- Updated .dockerignore to in

--- a/agent-core/Dockerfile
+++ b/agent-core/Dockerfile
@@ -1,2 +1,65 @@
-# Multi-stage Dockerfile for agent-core
-# TODO: Implement production-ready container build
+# Multi-stage build for Alfred Agent Core
+# Stage 1: Builder with uv for fast dependency installation
+FROM python:3.11-slim AS builder
+
+# Install uv for fast package management
+# Using the official installation script for portability
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /usr/local/bin/uv
+
+# Set working directory
+WORKDIR /app
+
+# Copy dependency files first for better caching
+COPY pyproject.toml uv.lock ./
+
+# Install dependencies into a virtual environment
+# uv will create .venv automatically
+RUN uv sync --frozen --no-install-project
+
+# Copy source code
+COPY src/ ./src/
+COPY main.py ./
+# Copy README.md for pyproject.toml reference
+COPY README.md ./
+
+# Install the project itself
+RUN uv sync --frozen
+
+# Stage 2: Runtime image
+FROM python:3.11-slim
+
+# Install runtime dependencies
+RUN apt-get update && apt-get install -y \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+# Create non-root user for security
+RUN useradd -m -u 1000 alfred && \
+    mkdir -p /app && \
+    chown -R alfred:alfred /app
+
+# Set working directory
+WORKDIR /app
+
+# Copy virtual environment and application from builder
+COPY --from=builder --chown=alfred:alfred /app/.venv /app/.venv
+COPY --from=builder --chown=alfred:alfred /app/src /app/src
+COPY --from=builder --chown=alfred:alfred /app/main.py /app/main.py
+
+# Switch to non-root user
+USER alfred
+
+# Set Python path to use the virtual environment
+ENV PATH="/app/.venv/bin:$PATH"
+ENV PYTHONPATH="/app"
+
+# Expose port
+EXPOSE 8080
+
+# Health check for container orchestration
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:8080/healthz || exit 1
+
+# Run the application
+# Using uvicorn directly from the virtual environment
+CMD ["python", "-m", "uvicorn", "src.app:app", "--host", "0.0.0.0", "--port", "8080"]
