feat(config): implement environment configuration loader with validation
Issue #6 - Create comprehensive environment configuration system

Changes:
- Implement Pydantic BaseSettings in src/config.py for type-safe config loading
- Add automatic generation of Fernet keys and JWT secrets when not provided
- Implement clear startup validation with helpful error messages
- Create detailed .env.example with all configuration variables documented
- Update app.py with validate_configuration() for fail-fast startup
- Integrate settings dependency injection into all routers
- Add masked logging for sensitive configuration values
- Implement production environment validation checks

Key features:
- Loads from environment variables and .env file
- Type validation and conversion (str, int, bool, HttpUrl, PostgresDsn)
- Required fields enforced (API_KEY, ANTHROPIC_API_KEY)
- Clear error messages with helpful hints for missing/invalid config
- Auto-generates encryption keys if not provided (with warnings)
- CORS origins parsed from comma-separated string
- Singleton pattern for global settings instance

Acceptance criteria met:
✓ App boots only via environment configuration (no hardcoded values)
✓ Required variables validated at startup with clear errors
✓ Comprehensive .env.example provided with descriptions
✓ All configuration centralized in Settings class

--- a/agent-core/.env.example
+++ b/agent-core/.env.example
@@ -1,29 +1,136 @@
-APP_ENV=dev
-APP_PORT=8080
+# Alfred Agent Core Environment Configuration
+# Copy this file to .env and fill in your values
+# Required fields are marked with [REQUIRED]
+
+# ============================================
+# APPLICATION SETTINGS
+# ============================================
+
+# Application environment: development, staging, production, test
+APP_ENV=development
+
+# Application name (used in logs and responses)
+APP_NAME="Alfred Agent Core"
+
+# Application version
+APP_VERSION=0.1.0
+
+# Logging level: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
-API_KEY=change-me
 
-# Model
-MODEL_PROVIDER=anthropic
-MODEL_NAME=claude-3-5-sonnet-20241022
+# ============================================
+# API SECURITY
+# ============================================
 
-# Database
-DB_URL=postgresql+psycopg://user:pass@host:5432/agent
+# [REQUIRED] API key for authenticating requests to this service
+# Must be at least 32 characters long
+# Generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
+API_KEY=your-secure-api-key-min-32-chars-long-replace-this
 
-# Crypto
-FERNET_KEY=base64-32bytes
+# Comma-separated list of allowed CORS origins
+CORS_ORIGINS=http://localhost:3000,http://localhost:8080
 
-# Cache
-CACHE_BACKEND=memory  # week 1; postgres in week 3
-CACHE_DEFAULT_TTL_SECONDS=14400
-CACHE_NOTION_PAGE_TTL_SECONDS=86400
-CACHE_NOTION_SEARCH_TTL_SECONDS=14400
+# ============================================
+# SERVER CONFIGURATION
+# ============================================
 
-# Notion OAuth
-NOTION_CLIENT_ID=...
-NOTION_CLIENT_SECRET=...
-NOTION_REDIRECT_URI=https://your.domain/oauth/notion/callback
+# Host to bind the server to (0.0.0.0 for all interfaces)
+HOST=0.0.0.0
 
-# Feature flags
-FEATURE_NOTION_HOSTED_MCP=true
-FEATURE_NOTION_SELF_HOST_FALLBACK=false
+# Port to bind the server to
+PORT=8080
+
+# ============================================
+# ANTHROPIC CONFIGURATION
+# ============================================
+
+# [REQUIRED] Anthropic API key for Claude model access
+# Get from: https://console.anthropic.com/account/keys
+ANTHROPIC_API_KEY=sk-ant-api03-your-key-here
+
+# Anthropic model to use
+ANTHROPIC_MODEL=claude-3-5-sonnet-20241022
+
+# Maximum tokens for Anthropic responses (1-8192)
+ANTHROPIC_MAX_TOKENS=4096
+
+# ============================================
+# DATABASE CONFIGURATION (Week 3)
+# ============================================
+
+# PostgreSQL connection URL
+# Format: postgresql://user:password@host:port/database
+# DATABASE_URL=postgresql://alfred:password@localhost:5432/agent_core
+
+# Database connection pool size (1-100)
+DATABASE_POOL_SIZE=10
+
+# Database connection pool timeout in seconds
+DATABASE_POOL_TIMEOUT=30
+
+# ============================================
+# NOTION OAUTH CONFIGURATION (Week 2)
+# ============================================
+
+# Notion OAuth app credentials
+# Get from: https://www.notion.so/my-integrations
+# NOTION_CLIENT_ID=your-notion-client-id
+# NOTION_CLIENT_SECRET=your-notion-client-secret
+
+# Notion OAuth callback URL (must match app settings)
+NOTION_REDIRECT_URI=http://localhost:8080/oauth/notion/callback
+
+# ============================================
+# SECURITY & ENCRYPTION
+# ============================================
+
+# Fernet encryption key for token storage
+# Auto-generated if not provided, but should be persistent in production
+# Generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+# FERNET_KEY=your-fernet-key-here
+
+# JWT secret for session tokens
+# Auto-generated if not provided, but should be persistent in production
+# Generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
+# JWT_SECRET=your-jwt-secret-here
+
+# ============================================
+# MCP (MODEL CONTEXT PROTOCOL) CONFIGURATION
+# ============================================
+
+# MCP tool call timeout in milliseconds (1000-120000)
+MCP_TIMEOUT=30000
+
+# MCP server URLs
+MCP_NOTION_SERVER_URL=http://localhost:3001
+MCP_GITHUB_SERVER_URL=http://localhost:3002
+
+# ============================================
+# CACHE CONFIGURATION
+# ============================================
+
+# Default cache TTL in seconds (0 to disable)
+CACHE_TTL_DEFAULT=3600  # 1 hour
+
+# Tool-specific cache TTLs
+CACHE_TTL_NOTION=300    # 5 minutes
+CACHE_TTL_GITHUB=900    # 15 minutes
+
+# ============================================
+# RATE LIMITING (Week 4)
+# ============================================
+
+# Maximum requests per window
+RATE_LIMIT_REQUESTS=100
+
+# Rate limit window in seconds
+RATE_LIMIT_WINDOW=60
+
+# ============================================
+# DOCKER-SPECIFIC OVERRIDES
+# ============================================
+
+# When running in Docker, you may need to override these:
+# MCP_NOTION_SERVER_URL=http://host.docker.internal:3001
+# MCP_GITHUB_SERVER_URL=http://host.docker.internal:3002
+# DATABASE_URL=postgresql://alfred:password@db:5432/agent_core
