fix(config): implement production-ready CORS configuration with Pydantic v2
- Use NoDecode + BeforeValidator for proper environment variable parsing
- Support both comma-separated and JSON array formats for CORS origins
- Add AnyHttpUrl validation for each origin (type safety)
- Prevent wildcard (*) origins in production environment
- Fix mutable default anti-pattern in logging context variable
- Update .env.example to document both CORS formats

This ensures proper type safety and flexibility for different deployment
environments (local dev, Docker, Kubernetes) while maintaining security
in production.

--- a/agent-core/.env.example
+++ b/agent-core/.env.example
@@ -27,8 +27,11 @@ LOG_LEVEL=INFO
 # Generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
 API_KEY=your-secure-api-key-min-32-chars-long-replace-this
 
-# Comma-separated list of allowed CORS origins
+# Allowed CORS origins - supports two formats:
+# Option 1: Comma-separated list (recommended for shells/Docker)
 CORS_ORIGINS=http://localhost:3000,http://localhost:8080
+# Option 2: JSON array (for complex deployments)
+# CORS_ORIGINS=["http://localhost:3000","http://localhost:8080"]
 
 # ============================================
 # SERVER CONFIGURATION
