feat(mcp): implement Notion MCP client factory for per-user toolsets
- Create NotionMCPClients factory class for managing per-user MCP clients
- Integrate OAuth Bearer token authentication with Notion's hosted MCP
- Add version-based cache invalidation to detect token changes
- Implement single-flight locks to prevent duplicate client creation
- Add one-shot 401 retry pattern with token refresh and client rebuild
- Update MCPRouter with get_toolsets_for_user() for per-user toolsets
- Enhance process_tool_call hook with auth error detection and retry
- Update agent orchestrator to accept and pass user_id for toolsets
- Update chat endpoints to extract and propagate user_id
- Add FEATURE_NOTION_HOSTED_MCP feature flag (default: true)
- Include comprehensive test script for token refresh paths

This completes Issue #17 - Notion MCP client factory implementation.
The system now supports per-user Notion toolsets via their hosted MCP
service at https://mcp.notion.com/mcp with proactive T-5m token refresh
and reactive 401 retry capabilities.

Closes #17

--- a/agent-core/.env.example
+++ b/agent-core/.env.example
@@ -108,6 +108,10 @@ MCP_TIMEOUT=30000
 MCP_NOTION_SERVER_URL=http://localhost:3001
 MCP_GITHUB_SERVER_URL=http://localhost:3002
 
+# Feature flag for Notion's hosted MCP service (Issue #17)
+# When enabled, authenticated users get access to Notion tools via hosted MCP
+FEATURE_NOTION_HOSTED_MCP=true
+
 # ============================================
 # CACHE CONFIGURATION
 # ============================================
