--- a/agent-core/pyproject.toml
+++ b/agent-core/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     # Utilities
     "python-dotenv>=1.0.0",
     "structlog>=23.1.0",
+    "psycopg2-binary>=2.9.10",
 ]
 
 [project.optional-dependencies]
