fix: address PR review feedback and add optional metadata fields
PR Review Fixes:
- Fix timezone-aware datetime usage throughout (use datetime.now(timezone.utc))
- Fix UUID type coercion in thread lookups
- Fix migration string defaults with sa.text() wrapper
- Add thread configuration settings to config.py
- Update soft delete to clear share tokens

Optional Features Added:
- Add title and thread_metadata fields to threads for organization
- Add request_id to thread_messages for debugging and tracing
- Create migration for new optional fields
- Rename metadata to thread_metadata to avoid SQLAlchemy reserved word

Database Layer Fixes:
- Convert PostgresDsn to string in database.py
- Fix psycopg3 connection parameters (use 'options' not 'server_settings')
- Update import to use get_session_factory

Testing:
- Add comprehensive test suite covering all thread functionality
- Test new metadata fields, request_id tracking, and idempotency
- All tests passing successfully

Addresses PR #53 review comments

--- a/agent-core/.env.test
+++ b/agent-core/.env.test
@@ -1,6 +1,4 @@
-# Test .env file to verify configuration validation
-
-# Valid minimal configuration
-APP_ENV=development
-API_KEY=test-api-key-with-minimum-32-characters-long
-ANTHROPIC_API_KEY=sk-ant-test-api-key-for-claude-access
+# Test environment for thread functionality tests
+DATABASE_URL=postgresql://alfred:password@localhost:5432/agent_core
+API_KEY=test-api-key-minimum-32-characters-long
+ANTHROPIC_API_KEY=sk-ant-test-key-for-testing-only
